tests/NormalTests/paczka1/small_fuzzy/93695803.err
Error in line 1: kJr5 A388 41,9
Error in line 4: GptBmCb A388 0,1
Error in line 6: kJr5 A579 38,7
